After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757675 - types: Tweak dummy padding in JsonObjectIter
types: Tweak dummy padding in JsonObjectIter
Status: RESOLVED FIXED
Product: json-glib
Classification: Core
Component: Core
git master
Other All
: Normal normal
: ---
Assigned To: json-glib-maint
json-glib-maint
Depends on:
Blocks:
 
 
Reported: 2015-11-06 10:25 UTC by Philip Withnall
Modified: 2015-11-06 10:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
types: Tweak dummy padding in JsonObjectIter (1.05 KB, patch)
2015-11-06 10:25 UTC, Philip Withnall
committed Details | Review

Description Philip Withnall 2015-11-06 10:25:43 UTC
Trivial patch attached. Fixes build failures on i386 and armhf.
Comment 1 Philip Withnall 2015-11-06 10:25:46 UTC
Created attachment 314969 [details] [review]
types: Tweak dummy padding in JsonObjectIter

Use padding which resembles the ABI structure of GHashTableIter so that
our struct size is the same as GHashTableIter on all platforms, rather
than just on x86_64. This fixes the static assertion failure on i386 and
armhf.
Comment 2 Emmanuele Bassi (:ebassi) 2015-11-06 10:31:42 UTC
Review of attachment 314969 [details] [review]:

Okay.
Comment 3 Philip Withnall 2015-11-06 10:59:14 UTC
Attachment 314969 [details] pushed as 3e0985c - types: Tweak dummy padding in JsonObjectIter