types: Tweak dummy padding in JsonObjectIter

Use padding which resembles the ABI structure of GHashTableIter so that
our struct size is the same as GHashTableIter on all platforms, rather
than just on x86_64. This fixes the static assertion failure on i386 and
armhf.

https://bugzilla.gnome.org/show_bug.cgi?id=757675